frontend/apps/movies/src/styles.scss
/* You can add global styles to this file, and also import other style files */

@font-face {
    font-family: 'Nature Beauty';
    src: url('/fonts/NatureBeauty.ttf') format('truetype');
}

body {
    padding: 0;
    margin: 0;
    overflow: hidden;
}

.divider {
    width: 100%;
    height: 1px;
    background-color: rgb(192, 192, 192);
}

/* Áp dụng cho toàn bộ trang */
* {
    scrollbar-width: thin;
    scrollbar-color: #888 rgb(50, 50, 50);
}

::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

::-webkit-scrollbar-track {
    background: rgb(50, 50, 50);
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background: linear-gradient(180deg, #bbb, #999);
    border-radius: 10px;
    border: 2px solid #f0f0f0;
}

::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(180deg, #999, #777);
}

